# gravity

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/scenes/: many.grav
src/: body.rs  fps.rs  main.rs
src/scene/: mod.rs  newcolor.rs  newcolor_colors  units.rs
